[package]
name = "ctlogs"
version = "0.1.0"
authors = [ "Stephen OBrien <wayofthepie@users.noreply.github.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.40"
base64 = "0.13.0"
der-parser = "4.1.0"
encoding = "0.2.33"
futures = "0.3.5"
http = "0.2.1"
reqwest = { version = "0.10.8", features = [ "json", "stream" ] }
serde = { version = "1.0.116", features = [ "derive" ] }
serde_json = "1.0.58"
tokio = { version = "0.2.22", features = [ "macros", "sync", "fs", "time", "signal", "io-util", "stream" ] }
x509-parser = { git = "https://github.com/wayofthepie/x509-parser.git", branch = "aia-update" }
structopt = "0.3.18"

[dev-dependencies]
wiremock = "0.3.0"
