[package]
name = "ctlogs"
version = "0.1.0"
authors = [ "Stephen OBrien <wayofthepie@users.noreply.github.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
base64 = "0.13.0"
der-parser = "4.1.0"
encoding = "0.2.33"
futures = "0.3.7"
http = "0.2.1"
reqwest = { version = "0.10.8", features = [ "json", "stream" ] }
serde = { version = "1.0.117", features = [ "derive" ] }
serde_json = "1.0.59"
tokio = { version = "0.3.2", features = [ "macros", "sync", "fs", "time", "signal", "io-util", "stream", "rt-multi-thread" ] }
x509-parser = { git = "https://github.com/wayofthepie/x509-parser.git", branch = "aia-update" }
structopt = "0.3.20"

[dev-dependencies]
wiremock = "0.3.0"
