[package]
name = "ctlogs"
version = "0.1.0"
authors = [ "Stephen OBrien <wayofthepie@users.noreply.github.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
base64 = "0.13.0"
der-parser = "4.1.0"
encoding = "0.2.33"
futures = "0.3.8"
http = "0.2.2"
reqwest = { version = "0.10.10", features = [ "json", "stream" ] }
serde = { version = "1.0.118", features = [ "derive" ] }
serde_json = "1.0.60"
tokio = { version = "0.2.24", features = [ "macros", "sync", "fs", "time", "signal", "io-util", "stream" ] }
x509-parser = { git = "https://github.com/wayofthepie/x509-parser.git", branch = "aia-update" }
structopt = "0.3.21"

[dev-dependencies]
wiremock = "0.3.0"
